include latex output

--- a/rirods_ugm_2023.html
+++ b/rirods_ugm_2023.html
@@ -746,14 +746,14 @@ iRODS Zone
 </ul>
 <p>Case study:</p>
 <ul>
-<li>data set on iRODS commit history</li>
+<li>Data set on iRODS commit history</li>
 <li><a href="https://github.com/FAIReLABS/iRODS4R/blob/main/posts/welcome/data/irods_repos.csv">https://github.com/FAIReLABS/iRODS4R/blob/main/posts/welcome/data/irods_repos.csv</a></li>
 </ul>
 </section>
 <section id="references" class="slide level2 smaller scrollable">
 <h2>References</h2>
 
-<img src="iods-ugm-logo.png" class="slide-logo r-stretch"><div class="footer footer-default">
+<img src="iRODS-logo.png" class="slide-logo r-stretch"><div class="footer footer-default">
 
 </div>
 <div id="refs" class="references csl-bib-body hanging-indent" role="list">
