--- a/rirods_ugm_2023.html
+++ b/rirods_ugm_2023.html
@@ -14,7 +14,7 @@
   <meta name="author" content="Mariana Montes">
   <meta name="author" content="Christine Staiger">
   <meta name="author" content="Terrell Russell">
-  <title>An R client for iRODS</title>
+  <title>An R Client for iRODS</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -412,7 +412,7 @@
     <div class="slides">
 
 <section id="title-slide" class="quarto-title-block center">
-  <h1 class="title">An R client for iRODS</h1>
+  <h1 class="title">An R Client for iRODS</h1>
   <p class="subtitle">rirods</p>
 
 <div class="quarto-title-authors">
@@ -464,11 +464,11 @@ Terrell Russell
 <li>Emphasis on statistics and visualization of data</li>
 </ul>
 
-<img data-src="rirods_ugm_2023_files/figure-revealjs/kdnuggest,%20options-1.png" width="768" class="r-stretch"><aside class="notes">
+<img data-src="rirods_ugm_2023_files/figure-revealjs/kdnuggest,%20options-1.png" width="768" class="r-stretch quarto-figure-center"><p class="caption">www.kdnuggets.com</p><aside class="notes">
 <ul>
 <li>R is used for data science.</li>
-<li>Data exploration</li>
-<li>Actual inference and predictive modelling</li>
+<li>Data exploration.</li>
+<li>Actual inference and predictive modelling.</li>
 <li>The figure is an example of R’s data visualization.</li>
 <li>Data is based on a poll with 1800 participants:</li>
 <li>“Which program do they use as Data Science platforms?”</li>
@@ -659,11 +659,11 @@ iRODS Zone
 </section></section>
 <section>
 <section id="designing-an-r-package" class="title-slide slide level1 center">
-<h1>Designing an R package</h1>
+<h1>Designing an R Package</h1>
 <aside class="notes">
 <ul>
-<li>Now that we covered the needs for iRODS in R.</li>
-<li>Let’s look at how we develop a package that can be used by all.</li>
+<li>Now that we covered the need for iRODS in R.</li>
+<li>Let’s look at how we develop a package that can be most conveniently used by R users.</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -784,9 +784,9 @@ iRODS Zone
 </div>
 <aside class="notes">
 <ul>
-<li>Let’s look of the design choices that we made.</li>
+<li>Let’s look at some of the design choices that we made.</li>
 <li>We tried to mimic the iCommands where we mainly exposed the user facing end-points.</li>
-<li>We have a modular design which ensures the adaptability =&gt; for example with a new REST API</li>
+<li>We have a modular design which ensures the adaptability =&gt; for example with a new REST API.</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -909,7 +909,7 @@ iRODS Zone
 </ul>
 <aside class="notes">
 <ul>
-<li>All source code is online on the iRODS GitHub organization</li>
+<li>All source code is online on the iRODS GitHub organization.</li>
 <li>For the foreseeable future we have two maintainers. Myself, currently at the Vienna University of Technology and Mariana Montes at the KU Leuven.</li>
 <li>Let’s have a quick glance at the website.</li>
 </ul>
@@ -943,7 +943,7 @@ iRODS Zone
 <ul>
 <li>Remote iRODS server with iRODS C++ REST 0.9.3</li>
 <li>Demo server which requires <code>docker</code> and <code>docker-compose</code></li>
-<li><code>&gt;= R 4.1</code> and <code>readr</code>, <code>dplyr</code>, and <code>ggplot2</code>.</li>
+<li><code>&gt;= R 4.1</code> and <code>readr</code>, and <code>dplyr</code>.</li>
 </ul>
 <p>Case study:</p>
 <ul>
@@ -954,7 +954,7 @@ iRODS Zone
 <ul>
 <li>I want to do a little demo now.</li>
 <li>For those that want to follow or re-create, these are the requirements.</li>
-<li>The data that I use is about GitHub stats of iRODS</li>
+<li>The data that I use is about some GitHub stats of iRODS.</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
