--- a/rirods_ugm_2023.html
+++ b/rirods_ugm_2023.html
@@ -504,9 +504,9 @@ Terrell Russell
 <p><em>SQLite, MySQL, PostgreSQL, MonetDB with <code>DBI</code> package</em></p>
 <aside class="notes">
 <ul>
-<li>Arguments already given; R used for data science</li>
-<li>Important asset is reproducible workflows (scripts and literate programming) =&gt; more efficient and precise analysis</li>
-<li>Data management constrained to SQL databases (DBI), intrinsically linked to tabular formats</li>
+<li>Arguments already given; R used for data science.</li>
+<li>Important asset is reproducible workflows (scripts and literate programming) =&gt; more efficient and precise analysis.</li>
+<li>Data management constrained to SQL databases (DBI), intrinsically linked to tabular formats.</li>
 <li>Reformatting required!</li>
 <li>Can we store R objects just as they are?</li>
 </ul>
@@ -545,13 +545,13 @@ Terrell Russell
 
 <aside class="notes">
 <ul>
-<li>iRODS for R</li>
-<li>gave it away =&gt; iRODS would free us from the strict formatting requirements</li>
-<li>Data storage: reduce restrictions =&gt; less transformation to be able to get it in the right format =&gt; tabular format =&gt; higher productivity</li>
+<li>iRODS for R.</li>
+<li>Gave it away =&gt; iRODS would free us from the strict formatting requirements.</li>
+<li>Data storage: reduce restrictions =&gt; less transformation to be able to get it in the right format =&gt; tabular format =&gt; higher productivity.</li>
 <li>I exemplify this here with very simple linear regression analysis with weight depended on height in humans, or BMI.</li>
 <li>Examine output (summary) of the model on next slide =&gt; this is a fairly complex model and this is only the summary</li>
-<li>Transformations required to get it tabular</li>
-<li>Or, we have to pick and choose what we think is most convenient at that point in time</li>
+<li>Transformations required to get it tabular.</li>
+<li>Or, we have to pick and choose what we think is most convenient at that point in time.</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -595,8 +595,8 @@ F-statistic: 168.9 on 1 and 8 DF,  p-value: 1.164e-06</code></pre>
 <p><em>What was object <code>BMI</code> again?</em></p>
 <aside class="notes">
 <ul>
-<li>A second major benefit will be the ability to better describe/annotate</li>
-<li>Thereby making it findable/discoverable for your future self or for others</li>
+<li>A second major benefit will be the ability to better describe/annotate.</li>
+<li>Thereby making it findable/discoverable for your future self or for others.</li>
 <li>What was this object <strong>BMI</strong> again? =&gt; Let’s have a look with rirods.</li>
 </ul>
 <style type="text/css">
@@ -804,9 +804,9 @@ iRODS Zone
 <h2>Interface</h2>
 <table>
 <colgroup>
-<col style="width: 18%">
-<col style="width: 51%">
-<col style="width: 30%">
+<col style="width: 23%">
+<col style="width: 48%">
+<col style="width: 27%">
 </colgroup>
 <thead>
 <tr class="header">
