--- a/rirods_ugm_2023.html
+++ b/rirods_ugm_2023.html
@@ -489,7 +489,7 @@ Terrell Russell
 <ul>
 <li>Creating reproducible workflows
 <ul>
-<li>Scripted analysis</li>
+<li>Scripted analysis + (remote) Git repository</li>
 <li>Literate programming (“Rmarkdown” and “Quarto”)</li>
 </ul></li>
 </ul>
@@ -589,7 +589,7 @@ F-statistic: 168.9 on 1 and 8 DF,  p-value: 1.164e-06</code></pre>
 <h2>Why iRODS?</h2>
 <ul>
 <li>Describing your data with metadata</li>
-<li>Making it findable for your peers</li>
+<li>Making it findable and shareable</li>
 </ul>
 <p><em>What was object <code>BMI</code> again?</em></p>
 <aside class="notes">
